added new page and renamed home page

--- a/home/index.html
+++ b/home/index.html
@@ -20,13 +20,14 @@
 
             <table>
                 <tr>
-                    <td>More than Numbers</td>
+                    <td><a href="../entries/numbers.html">More than Numbers</a></td>
+                    <td><a href=""></a></td>
+                    <td><a href=""></a></td>
                 </tr>
                 <tr>
-
-                </tr>
-                <tr>
-
+                    <td><a href=""></a></td>
+                    <td><a href=""></a></td>
+                    <td><a href=""></a></td>
                 </tr>
             </table>
         </div>
