fixed files after re-reorganization

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <table>
                 <tr>
-                    <td><a href="../entries/numbers.html">More than Numbers</a></td>
+                    <td><a href="./entries/numbers.html">More than Numbers</a></td>
                     <td><a href=""></a></td>
                     <td><a href=""></a></td>
                 </tr>
