--- a/entries/numbers.html
+++ b/entries/numbers.html
@@ -15,7 +15,7 @@
         <div class="content">
             <i class="left">Data science is a lot more fun when you realize it's <b> more than just the numbers.</b></i>
 
-            <p class="left"></p>
+            <p class="left">We</p>
         </div>
     </body>
 </html>
